Wrapped up styles and fix scroll issue

--- a/drexel/src/app/components/hero/hero.module.scss
+++ b/drexel/src/app/components/hero/hero.module.scss
@@ -1,5 +1,5 @@
+@import "../../styles/variables.module.scss";
 .container {
-  border: 2px solid green;
   margin-top: 7rem;
   background-image: url("https://res.cloudinary.com/db09icibj/image/upload/v1707763881/drexel-finance-website/landing/b392sqnl2r715zmxvmh4.jpg");
   background-position: center;
@@ -28,9 +28,25 @@
         text-align: center;
       }
       button {
+        border: none;
         width: 15rem;
         height: 5rem;
         border-radius: 1.5rem;
+        background-color: $lightAccent;
+        color: white;
+        font-size: 1.6rem;
+        font-weight: bold;
+        transition: all 0.1s ease-in-out;
+        opacity: 1;
+
+        &:hover {
+          cursor: pointer;
+          transition-timing-function: ease-in;
+          transition: 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
+          transform: translateY(-3px);
+          opacity: 1;
+          filter: drop-shadow(2px 2px 5px #ffffff);
+        }
       }
     }
     .bullishContainer {
