--- a/drexel/src/app/components/navBar/nav.module.scss
+++ b/drexel/src/app/components/navBar/nav.module.scss
@@ -2,23 +2,21 @@
   position: fixed;
   display: flex;
   width: 100%;
-  border: 2px solid red;
   padding: 0rem 1.5rem;
   height: 7rem;
   top: 0;
   background-color: #050a30;
+  z-index: 100;
   .logoSection {
     display: flex;
     align-items: center;
     width: 25%;
-    border: 2px solid blue;
   }
   .linkSection {
     display: flex;
     align-items: center;
     justify-content: flex-end;
     width: 75%;
-    border: 2px solid blue;
     ul {
       display: flex;
       list-style-type: none;
