--- a/drexel/src/app/page.module.scss
+++ b/drexel/src/app/page.module.scss
@@ -1,7 +1,6 @@
 @import "./styles/variables.module.scss";
 
 .container {
-  z-index: 1000;
   .progressBar {
     position: fixed;
     top: 0;
